--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+0.11.0a
+Fixed large amount of bugs, errors and performance issues
 0.11.0
 Revamped effect system to be modifiable and support saves 
 	Old saves can't be imported or loaded anymore, from this point the previous save files should be supported automatically
