--- a/changelog
+++ b/changelog
@@ -1,3 +1,16 @@
+0.11.0d
+Fixed events disabling characters
+Fixed a couple issues with stat display
+Fixed resurrection spell
+0.11.0c
+Added 3 new random events
+Added new Resistance stat to slave training, removed 3 day training cooldown, added Loyalty as trait unlock for subordinates
+Watchdog class now improves Authority instead of reducing it
+Fixed Amelia and Aire character obtaining issues
+Fixed an issue with classes improving factors
+Fixed some item and skill issues
+0.11.0b
+Fixed more issues
 0.11.0a
 Fixed large amount of bugs, errors and performance issues
 0.11.0
