--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+Slightly reduced Staves MATK bonus and rebalanced ATK bonus
+Archer class now grants some passive ATK
 0.11.0d
 Fixed events disabling characters
 Fixed a couple issues with stat display
