--- a/changelog
+++ b/changelog
@@ -1,5 +1,16 @@
 Slightly reduced Staves MATK bonus and rebalanced ATK bonus
 Archer class now grants some passive ATK
+Added warning to cursed items beingdestroyed on equipping normal item when cursed was already equipped
+Fixed characters being stuck on certain spots when being disabled
+Fixed some combat effects not stacking correctly
+Fixed some items and curses giving not applying their bonuses correctly
+Fixed mana gains from certain effects not being logged properly
+Fixed elemental protection buff damaging targets on apply
+Fixed berserker passive not going into cooldown correctly
+Fixed Lizard skin not being harvestable
+Minor Paperdoll fixes
+Minor missing text fixes
+Added Spanish translation (thanks to Yucrack)
 0.11.0d
 Fixed events disabling characters
 Fixed a couple issues with stat display
