--- a/changelog
+++ b/changelog
@@ -5,6 +5,7 @@ Added breakdown mechanic for slaves
 Corrected some quest texts
 Gifted now gives 50% more mana instead of 100%
 Minor adjustments to elf/tribal elf race bonuses
+Fixed memory leaks tied to chat banter and random events
 Fixed Lizard skin gathering issue
 Fixed unique characters not assigning their virginity correctly on spawn
 Fixed Yye of the storm not working correctly
