--- a/changelog
+++ b/changelog
@@ -2,13 +2,14 @@
 Added new Anastasia quest, 1 scene and 1 wedding scene
 Added Zephyra's wedding scene
 Added breakdown mechanic for slaves
+Added upgade option to Hector's Armor, Ramont's Axe, Garb of the forest and more
 Corrected some quest texts
 Gifted now gives 50% more mana instead of 100%
 Minor adjustments to elf/tribal elf race bonuses
 Fixed memory leaks tied to chat banter and random events
 Fixed Lizard skin gathering issue
 Fixed unique characters not assigning their virginity correctly on spawn
-Fixed Yye of the storm not working correctly
+Fixed Eye of the storm not working correctly
 Fixed Rally not recovering hp 
 0.11.0e
 Slightly reduced Staves MATK bonus and rebalanced ATK bonus
