--- a/changelog
+++ b/changelog
@@ -1,7 +1,10 @@
+Fixed another random portrait issue
+Fixed some new event issues
+Fixed Anastasia's quest progress and text issues 
 0.11.1
 Added new Anastasia quest, 1 scene and 1 wedding scene
 Added Zephyra's wedding scene
-Added breakdown mechanic for slaves
+Added breakdown mechanic for characters
 Added new dungeon events
 Added new dungeon map to loot tables
 Slightly rebalanced some loot and event lists
