--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+#TODO add new scenes tooltip
+
+
 Fixed another random portrait issue
 Fixed some new event issues
 Fixed Anastasia's quest progress and text issues 
