--- a/changelog
+++ b/changelog
@@ -1,6 +1,5 @@
-#TODO add new scenes tooltip
-
-
+Added new Anastasia sprite (unlocked after completing her first quest)
+Fixed missing gallery tooltips
 Fixed another random portrait issue
 Fixed some new event issues
 Fixed Anastasia's quest progress and text issues 
