--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+0.11.1b
+Added combat animation for many spells
+Fixed multiple combat skill issues
+0.11.1a
 Added new Anastasia sprite (unlocked after completing her first quest)
 Fixed missing gallery tooltips
 Fixed another random portrait issue
