--- a/changelog
+++ b/changelog
@@ -1,4 +1,15 @@
+Improved lategame performance slightly
+Fixed basic mana values being incorrect
+Fixed multiple mistakes in Ana's quest
+Fixed poison effect not disappearing after end of combat
+0.11.1d
 Rebalanced masteries and some classes. Gave extra punch to physical classes and masteries and slightly nerfed magic masteries
+Fixed some tooltip issues
+Fixed a few combat gui issues
+Fixed error related to character travel
+Added missing scenes to gallery
+Fixed some issues related to save/loading
+Other game state fixes
 0.11.1c
 Fixed some issues with guild quests from older saves
 Fixed Dark Flame not working correctly
