--- a/changelog
+++ b/changelog
@@ -1,3 +1,11 @@
+0.12.0
+Added new Fame stat and system:
+	Characters will earn fame which will affect their wage and performance in certain places
+	Added 2 new items which block Fame growth
+Added new minor trainings
+Optimized turn log menu, character changes are also displaced there now
+Earth magic T2 replaced acid bomb with impale (new spell)
+0.11.1e
 Improved lategame performance slightly
 Fixed basic mana values being incorrect
 Fixed multiple mistakes in Ana's quest
