--- a/changelog
+++ b/changelog
@@ -1,6 +1,7 @@
 0.13.1b
 Fixed some quest scenes breaking the game
 Fixed Aliron guild panel not working properly with navigation panel scroll
+Improved some descriptions related to succubus mechanics
 0.13.1a
 Fixed vampirism effect not working
 Fixed Kuro final dungeon not working properly (backward compatible)
