--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+0.13.2
+Added Heleviel questline
+Added a one time option to purchase corruptive essence if it wasn't chosen as starting bonus
+Added color codes to slave list tasks
 0.13.1c
 Corrected some scene dialogues
 Fixed Devastation skill and made its animation faster
