--- a/changelog
+++ b/changelog
@@ -2,6 +2,7 @@
 Added Heleviel questline and wedding scene
 Added a one time option to purchase corruptive essence if it wasn't chosen as starting bonus
 Added color codes to slave list tasks
+Updated multiple skill sounds effects
 Void now cost 16 (up from 10) and has 5 turn cooldown (up from 1)
 Fixed void only proccing its debuffs on crit 
 Quests should now have fixed reward and be faithful to the tooltip
