--- a/changelog
+++ b/changelog
@@ -7,7 +7,7 @@ Void now cost 16 (up from 10) and has 5 turn cooldown (up from 1)
 Fixed void only proccing its debuffs on crit 
 Quests should now have fixed reward and be faithful to the tooltip
 Fixed sharpness enchant not working on some items
-Fixed some minor errors with character selection scren
+Fixed some minor errors with character selection screen
 0.13.1c
 Corrected some scene dialogues
 Fixed Devastation skill and made its animation faster
