--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+0.13.2a
+Fixed multiple issues with Heleviel's quest
+Fixed some repeatable quests not properly giving out their reward
+Fixed changelog being empty
+Fixed some missing translations 
 0.13.2
 Added Heleviel questline and wedding scene
 Added a one time option to purchase corruptive essence if it wasn't chosen as starting bonus
