--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+0.13.2b
+Added damage types to combat log
 0.13.2a
 Fixed multiple issues with Heleviel's quest
 Fixed some repeatable quests not properly giving out their reward
