--- a/changelog
+++ b/changelog
@@ -1,5 +1,6 @@
 0.13.2b
 Added damage types to combat log
+Added color border to turn order to indicate player/enemy characters
 0.13.2a
 Fixed multiple issues with Heleviel's quest
 Fixed some repeatable quests not properly giving out their reward
