--- a/changelog
+++ b/changelog
@@ -1,6 +1,7 @@
 0.13.2b
 Added damage types to combat log
 Added color border to turn order to indicate player/enemy characters
+Added dropdown menu on rightclick to characters and improved occupation menu behavior on opening
 0.13.2a
 Fixed multiple issues with Heleviel's quest
 Fixed some repeatable quests not properly giving out their reward
