--- a/changelog
+++ b/changelog
@@ -1,7 +1,9 @@
 0.13.2b
+Redesigned character info and some parts of character list
 Added damage types to combat log
 Added color border to turn order to indicate player/enemy characters
 Added dropdown menu on rightclick to characters and improved occupation menu behavior on opening
+Renamed Nobody fame level to Stranger
 0.13.2a
 Fixed multiple issues with Heleviel's quest
 Fixed some repeatable quests not properly giving out their reward
