--- a/changelog
+++ b/changelog
@@ -4,6 +4,9 @@ Added damage types to combat log
 Added color border to turn order to indicate player/enemy characters
 Added dropdown menu on rightclick to characters and improved occupation menu behavior on opening
 Renamed Nobody fame level to Stranger
+Weapons now have minimum mastery requirements necessary to equip them
+Fixed Wind Blade attacking same target every time
+Fixed multiple places missing item color quality background
 0.13.2a
 Fixed multiple issues with Heleviel's quest
 Fixed some repeatable quests not properly giving out their reward
