--- a/changelog
+++ b/changelog
@@ -12,6 +12,7 @@ Invested mastery points are now capped at 10 per mastery
 Trap skills moved from Marksmanship Mastery to Stealth Mastery
 Fire Arrows and Poison Arrows added to Marksmanship Mastery instead
 Master trait Communicative now gives +3 persuasion check, +2 leadership mastery and +2 weekly dates instead of +1 social skill charges.
+Updated some old cg scene arts
 Master trait Progenecy now gives for all offspring 50% chance for each Factor to be increased by 1
 Easy training option moved to advanced settings
 Characters freed with Writ of Exemption will retain some of the trained traits
