--- a/changelog
+++ b/changelog
@@ -18,6 +18,7 @@ Easy training option moved to advanced settings
 Void Barrage now shoots 4 times (down from 5), for 85% MATK (up from 80%) and costs 6 MP (down from 7)
 Bolt trap now deals 110% ATK damage (down from 150%) but is unlocked at Stealth Mastery 1
 Characters freed with Writ of Exemption will retain some of the trained traits
+Amelia after recruitment won't adopt catlike speech pattern
 Fixed Wind Blade attacking same target every time
 Fixed multiple places missing item color quality background
 Fixed beverages not being sacrificable at the altars
