--- a/changelog
+++ b/changelog
@@ -7,6 +7,7 @@ Added search bar to enchant and gear improvement modules
 Added new scene for Cali for when player leaves her to William
 Renamed Nobody fame level to Stranger
 Revamped shop menu
+Removed confimation message when accepting quests
 Weapons now have minimum mastery requirements necessary to equip them
 Invested mastery points are now capped at 10 per mastery
 Trap skills moved from Marksmanship Mastery to Stealth Mastery
