--- a/changelog
+++ b/changelog
@@ -13,6 +13,9 @@ Invested mastery points are now capped at 8 per mastery
 Trap skills moved from Marksmanship Mastery to Stealth Mastery
 Fire Arrows and Poison Arrows added to Marksmanship Mastery instead
 Master talent Communicative now gives +3 persuasion check, +2 leadership mastery and +2 weekly dates instead of +1 social skill charges.
+Elite enemies now have masteries instead of passive traits
+Improved travel character selection
+Travel menu can be accessed from other locations now
 Updated some old cg scene arts
 Master trait Progenecy now gives for all offspring 50% chance for each Factor to be increased by 1
 Easy training option moved to advanced settings
@@ -21,6 +24,7 @@ Bolt trap now deals 110% ATK damage (down from 150%) but is unlocked at Stealth 
 Characters freed with Writ of Exemption will retain some of the trained traits
 Amelia after recruitment won't adopt catlike speech pattern
 Amelia is now set as friends with Cali
+Minor trainings now take time to unlock
 Fixed Wind Blade attacking same target every time
 Fixed multiple places missing item color quality background
 Fixed beverages not being sacrificable at the altars
