--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+0.13.3a
+Reduced Proficiency training time by about 30%
+Reduced breakdown time to 1 day down from 2
+Disintegrate cooldown increased to 3 turns from 0
+Character info now can be used to swich between characters
+Fixed multiple GUI issues
+Fixed training actions causing issues on full game reinstall
 0.13.3
 Redesigned character info and some parts of character list
 Added damage types to combat log
