--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+Improved quest notice board
+Fixed writ of exemption missing some of the traits
+Fixed characters on quests being selectable for sex interactions
 0.13.3a
 Reduced Proficiency training time by about 30%
 Reduced breakdown time to 1 day down from 2
