--- a/changelog
+++ b/changelog
@@ -1,7 +1,9 @@
 Improved quest notice board
+Added reroll option to character creation for name and appearance
 Fixed writ of exemption missing some of the traits
 Fixed characters on quests being selectable for sex interactions
 Fixed unavailable characters still being presented on some quests
+Fixed male bald characters having back hair on generation
 0.13.3a
 Reduced Proficiency training time by about 30%
 Reduced breakdown time to 1 day down from 2
