--- a/changelog
+++ b/changelog
@@ -4,6 +4,7 @@ Fixed writ of exemption missing some of the traits
 Fixed characters on quests being selectable for sex interactions
 Fixed unavailable characters still being presented on some quests
 Fixed male bald characters having back hair on generation
+Fixed Cali&Amelia scene missing from gallery
 0.13.3a
 Reduced Proficiency training time by about 30%
 Reduced breakdown time to 1 day down from 2
