--- a/changelog
+++ b/changelog
@@ -1,5 +1,6 @@
 Improved quest notice board
 Added reroll option to character creation for name and appearance
+Revamped the way damage modificators are calculated to be addictive instead of multiplicative
 Fixed writ of exemption missing some of the traits
 Fixed characters on quests being selectable for sex interactions
 Fixed unavailable characters still being presented on some quests
