--- a/changelog
+++ b/changelog
@@ -1,8 +1,10 @@
 Improved quest notice board
+Added multiple new songs through the game and story
 Added reroll option to character creation for name and appearance
 Revamped the way damage modificators are calculated to be addictive instead of multiplicative
 Nerfed critical rates across various effects and classes
 Nerfed Ninja's evasion bonus
+Forbid Masturbation rule now provides +2 Loyalty Gain and -10% productivity
 Fixed writ of exemption missing some of the traits
 Fixed characters on quests being selectable for sex interactions
 Fixed unavailable characters still being presented on some quests
