--- a/changelog
+++ b/changelog
@@ -5,6 +5,7 @@ Added reroll option to character creation for name and appearance
 Revamped the way damage modificators are calculated to be addictive instead of multiplicative
 Nerfed critical rates across various effects and classes
 Nerfed Ninja's evasion bonus
+Reduced the number of waiting days for most quests and events to progress
 Forbid Masturbation rule now provides +2 Loyalty Gain and -10% productivity
 Fixed writ of exemption missing some of the traits
 Fixed characters on quests being selectable for sex interactions
